--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" width=960 height=600 style="width: 960px; height: 600px; background: #231F20"></canvas>
-    <script src="Build/Web 1.0 Beta (No GZIP).loader.js"></script>
+    <script src="Build/Web 1.1 Beta.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/Web 1.0 Beta (No GZIP).data",
-        frameworkUrl: "Build/Web 1.0 Beta (No GZIP).framework.js",
-        codeUrl: "Build/Web 1.0 Beta (No GZIP).wasm",
+        dataUrl: "Build/Web 1.1 Beta.data",
+        frameworkUrl: "Build/Web 1.1 Beta.framework.js",
+        codeUrl: "Build/Web 1.1 Beta.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DiscountDevs",
         productName: "SomeRandomGaem",
