--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <canvas id="unity-canvas" width=1920 height=1080></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Web 1.4 Beta.loader.js";
+      var loaderUrl = buildUrl + "/Web 1.5 Beta (Pause menu, jetpack).loader.js";
       var config = {
-        dataUrl: buildUrl + "/Web 1.4 Beta.data",
-        frameworkUrl: buildUrl + "/Web 1.4 Beta.framework.js",
-        codeUrl: buildUrl + "/Web 1.4 Beta.wasm",
+        dataUrl: buildUrl + "/Web 1.5 Beta (Pause menu, jetpack).data",
+        frameworkUrl: buildUrl + "/Web 1.5 Beta (Pause menu, jetpack).framework.js",
+        codeUrl: buildUrl + "/Web 1.5 Beta (Pause menu, jetpack).wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DiscountDevs",
         productName: "Descend",
@@ -62,8 +62,8 @@
           mobileWarning.style.display = "none";
         }, 5000);
       } else {
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "1920px";
+        canvas.style.height = "1080px";
       }
       loadingBar.style.display = "block";
 
